# TWILIO-REVENUE-AND-EXPENSE-NGOTIATION-MODEL

./: .gitignore  AGENTS.md  README.md  invoice_rollup.py  package-lock.json  package.json  pyproject.toml  tailwind.config.cjs  tsconfig.base.json
.github/workflows/: pages.yml  slack-tier.yml
apps/pro-dashboard/: index.html  tailwind.config.cjs  tsconfig.json  vite.config.ts
apps/pro-dashboard/src/: App.tsx  main.tsx  styles.css
backend/: AGENTS.md  __init__.py  api.py  app.py  config.py  requirements.txt  sample_data.py  services.py  supabase_gateway.py  twilio_gateway.py
data/: twilio_sku_catalog.json
desktop/: AGENTS.md  Cargo.toml
desktop/src/: client.rs  config.rs  main.rs
docs/: README.md  SHIPIT.md  Twilio_Exec_Dashboard_PRO.html  Twilio_Exec_Dashboard_SHINY.html  architecture.md  email_final.txt  final_email.md  index.html  launch-readiness-checklist.md  schema-version.json  status-report.md  twilio_sku_catalog.json
docs/contracts/: amendment_v2.md
docs/dashboard/: dashboard-overview.md
docs/financials/: invoice-history.md  spending-records.md  twilio-sid-confirmation.md
docs/pro-dashboard/: index.html
docs/pro-dashboard/assets/: index-ByW3LOSn.js  (+5 more)
docs/timeline/: approval-timeline.md  contract-terms.md
scripts/: build_catalog.py
tests/: test_backend.py  test_backend_api.py  test_catalog_schema.py  test_model.py
twilio_revenue_and_expense_ngotiation_model/: __init__.py  model.py
web/: AGENTS.md  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json
web/src/: App.test.ts  App.tsx  styles.css
(+18 files in other folders)
