[project]
name = "twilio-negotiation"
version = "0.1.0"
description = "Executive negotiation dashboard tooling"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "pandas>=2.2.0",
  "supabase>=2.4.0",
  "python-dotenv>=1.0.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "httpx>=0.27",
  "pytest-asyncio>=0.23"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["twilio_revenue_and_expense_ngotiation_model", "backend"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
